--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2023-07-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-env.h (pkl_env_new): Update comment to document
+	behavior on failure (return `NULL').
+	(pkl_env_push_frame): Likewise.
+	(pkl_env_dup_toplevel): Likewise.
+	* libpoke/pkl-env.c (xalloc.h): Remove include.
+	(pkl_env_new): Use `calloc' instead of `xzalloc'.
+	(pkl_env_push): Handle memory error.
+	(pkl_env_dup_toplevel): Likewise.
+	* libpoke/pkl.c (pkl_new): Handle memory failures related to
+	`pkl_env'.
+	(pkl_execute_buffer): Likewise.
+	(pkl_execute_statement): Likewise.
+	(pkl_compile_expression): Likewise.
+	(pkl_execute_expression): Likewise.
+	(pkl_execute_file): Likewise.
+
 2023-06-28  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/pk-ios.c (pk_open_proc_maps): Fix access to uninitialized
