--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-07-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-gen.pks (struct_mapper): Make sure `@field' is of
+	type `PKL_AST_STRUCT_TYPE_FIELD' before using the field accessor.
+	(struct_constructor): Likewise.
+
 2023-07-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-ast.h (PKL_AST_DECL_PREV_DECL): New macro.
