--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-07-20  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* doc/poke.texi (Scripts): Add missing `open' to example.
+
 2023-07-15  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/pk-cmd-ios.c (pk_cmd_sub): Avoid assert when no name is
