--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-07-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* doc/poke.texi (Integral Structs): Update.
+
 2023-07-20  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* doc/poke.texi (Scripts): Add missing `open' to example.
