--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2023-08-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* liboke/ios.c (ios_write_int_common): Fix the function when `bits'
+	is 16, 24, 32, 40, 48, 56, 64.
+	* testsuite/poke.map/maps-uint-write-75.pk: New test.
+	* testsuite/poke.map/maps-uint-write-76.pk: Likewise.
+	* testsuite/poke.map/maps-uint-write-77.pk: Likewise.
+	* testsuite/poke.map/maps-uint-write-78.pk: Likewise.
+	* testsuite/poke.map/maps-uint-write-79.pk: Likewise.
+	* testsuite/poke.map/maps-uint-write-80.pk: Likewise.
+	* testsuite/poke.map/maps-uint-write-81.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+
 2023-07-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* doc/poke.texi (Integral Structs): Update.
