build: do not use AC_PROG_CC_C99 with autoconf >= 2.70
That macro is obsolete in recent versions of autoconf and its effect
is achieved by AC_PROG_CC.

2023-08-20  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Do not use AC_PROG_CC_C99 with autoconf >= 2.70.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-08-20  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* configure.ac: Do not use AC_PROG_CC_C99 with autoconf >= 2.70.
+
 2023-08-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* liboke/ios.c (ios_write_int_common): Fix the function when `bits'
