--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-08-20  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* NEWS: Add entries for poke 3.3.
+	* doc/gendocs_template (For version 3.3): Update version to 3.3.
+
+2023-08-20  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* configure.ac: Do not use AC_PROG_CC_C99 with autoconf >= 2.70.
 
 2023-08-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
