--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+2023-08-24  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/pk-hserver.c (hserver_thread_worker): Register/unregister
+	listener thread in libpoke.
+
+2023-08-23  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/libpoke.h: Prototypes for pk_register_thread and
+	pk_unregister_threads.
+	* libpoke/libpoke.c (pk_register_thread): New function.
+	(pk_unregister_thread): Likewise.
+	* libpoke/pvm-alloc.h: Prototypes for pvm_alloc_register_thread
+	and pvm_alloc_unregister_thread.
+	* libpoke/pvm-alloc.c (pvm_alloc_initialize): Call
+	GC_allow_register_threads.
+	(pvm_alloc_register_thread): New function.
+	(pvm_alloc_unregister_thread): Likewise.
+	* libpoke/pvm.h: Prototype for pvm_register_thread and
+	pvm_unregister_thread.
+	* libpoke/pvm.c (pvm_register_thread): New function.
+	(pvm_unregister_thread): Likewise.
+
+
 2023-08-23  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/pk-dump.pk (pk_dump_max_line_width): New variable.
