--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-08-24  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* pickles/ios.pk: Use "closure" hyperlinks to guarantee that they
+	will work ever if another subsequent dump is issued.
+
+2023-08-24  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-hserver.c (hserver_thread_worker): Register/unregister
 	listener thread in libpoke.
 
