--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-09-06  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* doc/poke.texi (elfextractor): Fix example.
+
 2023-08-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pvm-alloc.h (GC_THREADS): New cpp define.
