--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -7509,7 +7509,7 @@ This is a possible implementation of elfextractor:
 
 load elf;
 
-if (!(argv'length in [1,2]))
+if (!(argv'length in [1UL,2UL]))
   @{
     print "Usage: elfextractor FILE [SECTION_NAME]\n";
     exit (1);
@@ -7525,7 +7525,7 @@ try
 
     for (shdr in elf.shdr where shdr.sh_type != 0x0)
       @{
-        var sname = elf.get_string (shdr.sh_name);
+        var sname = elf.get_section_name (shdr.sh_name);
 
         if (section_name == "" || sname == section_name)
           save :ios elf'ios :file file_name + sname
