--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2023-09-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-lex.l (NEWLINE): Add `\r\n' sequence to newline
+	definition.
+	* doc/poke.texi (The Poke Language): Add a new section `Source Code
+	Encoding'.
+
 2023-09-08  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-typify.c (pkl_typify1_ps_trimmer): The type of the
