pkl: ATRIM is no longer a macro instruction
This patch moves the `atrim' macro from pkl-asm.pks to pkl-gen.pks and
changes the macro assembler to not support an ATRIM macro-instruction.

2023-09-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def: Remove PKL_INSN_ATRIM.
	* libpoke/pkl-asm.c (pkl_asm_insn_atrim): Delete.
	(pkl_asm_insn): Do not handle ATRIM.
	* libpoke/pkl-asm.pks (atrim): Move macro from here...
	* libpoke/pkl-gen.pks (atrim): ... to here.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2023-09-08  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-insn.def: Remove PKL_INSN_ATRIM.
+	* libpoke/pkl-asm.c (pkl_asm_insn_atrim): Delete.
+	(pkl_asm_insn): Do not handle ATRIM.
+	* libpoke/pkl-asm.pks (atrim): Move macro from here...
+	* libpoke/pkl-gen.pks (atrim): ... to here.
+
 2023-09-06  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* doc/poke.texi (elfextractor): Fix example.
